package dbproto;

message base_info_t
{
    optional string nick = 1; // 昵称
}

